@@ -1,9 +1,15 @@
 ***********************************
 CHANGES IN VERSION 2.11.0
 
+NEW FEATURES
+
+   o Add MultiQC support for HiC-Pro (issue #144)
+
+   o New utils: split_sparse.py allowing to split a genome-wide matrix into per-chromosome sparse matrices
+
 SIGNIFICANT USER-VISIBLE CHANGES
 
-   o Add MultiQC support for HiC-Pro
+   o Only one BED file is now generated by build_matrix (issue #158)
 
    o Update of Singularity image
 
@@ -15,7 +21,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
 BUG FIXES
 
-   o Fix bug in read name when merging SAM files
+   o Fix bug in read name when merging SAM files (issue #153)
 
    o Fix inversion between cis/long range contacts in plot_hic_contacts.R
 
